# onnx9000

./: .gitignore  .lintstagedrc  .prettierignore  .shape_inference_updater.py  ARCHITECTURE.md  ARCHITECTURE_V2.md  C_UNSTUB_PLAN.md  KERAS_ROADMAP.md  MASTER_MODEL_ZOO_VALIDATION_PLAN.md  Makefile  ONNX0_ORT_TRAINING.md  ONNX10_SKL2ONNX.md  ONNX11_ONNXMLTOOLS.md  ONNX12_GRAPHSURGEON.md  ONNX13_HUMMINGBIRD.md  ONNX14_NETRON.md  ONNX15_ONNX_TOOL.md  ONNX16_ONNXMLIR.md  ONNX17_SAFETENSORS.md  ONNX1_ORT_WEB.md  ONNX2_ORT_EXTENSIONS.md  ONNX3_TORCH_EXPORTERS.md  ONNX4_OLIVE_OPTIMIZER.md  ONNX5_ONNX_SIMPLIFIER.md  ONNX6_ONNXSCRIPT_SPOX.md  ONNX7_ORT_NATIVE.md  ONNX8_TF2ONNX.md  ONNX9_PADDLE2ONNX.md  ONNX_COMPLIANCE.md  ONNX_ECOSYSTEM.md  ONNX_NEXT.md  ONNX_NEXT_NEXT_PLAN.md  ONNX_RUNTIME.md  ORPHAN_PLAN.md  PYTORCH_ROADMAP.md  README.md  REFACTOR_PLAN.md  ROADMAP.md  SUPPORTED_PER_FRAMEWORK.md  USAGE.md  (+52 more)
.github/: RELEASE_NOTES_TEMPLATE.md  release.yml
.husky/: pre-commit
apps/cli/: out.onnx  package.json  pyproject.toml  test.h  test.py  tsconfig.json
apps/cli/src/: index.ts  tui_chat.py
apps/cli/src/commands/: agent.ts  apple.ts  arena.ts  autograd.ts  convert.ts  coreml.ts  cuda.ts  diffusers.ts  edit.ts  export.ts  gguf.ts  hummingbird.ts  inspect.ts  iree.ts  jax.ts  json-extract.ts  keras2onnx.ts  llama-web.ts  mlir.ts  mmdnn.ts  mobile-memory.ts  new-model-arch.ts  onnx-checker.ts  onnx2c.ts  onnx2tf.ts  optimize.ts  optimum.ts  paddle2onnx.ts  progressive-loading.ts  pytorch-codegen.ts  rocm.ts  script.ts  simplify.ts  skl2onnx.ts  sparse.ts  sphinx-demo-ui.ts  tensorrt.ts  tfjs-shim.ts  tflite.ts  transformers.ts  (+8 more)
apps/cli/src/onnx9000_cli/: __init__.py  coverage.py  main.py
apps/cli/tests/: autograd.test.ts  conftest.py  coreml.test.ts  edit.test.ts  export.test.ts  genai.test.ts  gguf.test.ts  graphsurgeon.test.ts  hummingbird.test.ts  iree.test.ts  json-extract.test.ts  onnx2tf.test.ts  optimum.test.ts  pytorch-codegen.test.ts  sparse.test.ts  sphinx-demo-ui.test.ts  test_cli.py  test_cli_agent.py  test_cli_arena.py  test_cli_autograd.py  test_cli_coreml.py  test_cli_coverage.py  test_cli_coverage3.py  test_cli_coverage_main_gaps.py  test_cli_coverage_main_gaps2.py  test_cli_coverage_main_gaps3.py  test_cli_cuda.py  test_cli_ecosystem_final.py  test_cli_edit.py  test_cli_genai_models.py  test_cli_gguf.py  test_cli_hummingbird.py  test_cli_iree.py  test_cli_jax.py  test_cli_json_extract.py  test_cli_keras2onnx.py  test_cli_main_10.py  test_cli_main_100.py  test_cli_main_101.py  test_cli_main_102.py  (+187 more)
benchmarks/: memory_profiler.py  safetensors_benchmark.py  test_benchmarks.py  tps_benchmark.py  ttft_benchmark.py
compliance/: CAFFE_SUPPORT.md  CATBOOST_SUPPORT.md  CNTK_SUPPORT.md  COREMLTOOLS_SUPPORT.md  DARKNET_SUPPORT.md  FLAX_SUPPORT.md  GGUF_SUPPORT.md  H2O_SUPPORT.md  JAX_SUPPORT.md  KERAS_SUPPORT.md  LIBSVM_SUPPORT.md  LIGHTGBM_SUPPORT.md  MXNET_SUPPORT.md  NCNN_SUPPORT.md  ONNX_SUPPORT.md  PADDLE_SUPPORT.md  PYSPARK_SUPPORT.md  SAFETENSORS_SUPPORT.md  SKLEARN_SUPPORT.md  TENSORFLOW_SUPPORT.md  TORCH_SUPPORT.md  XGBOOST_SUPPORT.md
demo_server/: server.py
docs/: API_GENAI.md  IREE_ECOSYSTEM.md  JSON_EXTRACT.md  MOBILE_MEMORY.md  Makefile  NEW_MODEL_ARCH.md  ONNX_SCRIPT.md  ONNX_WEBGPU_SUPPORT.md  PROGRESSIVE_LOADING.md  RELEASE_ANNOUNCEMENT.md  SPHINX_DEMO_UI.md  TRITON_MAPPING.md  TUTORIAL_AGENT.md  TUTORIAL_MLIR_LOWERING.md  TUTORIAL_SPARSE.md  TUTORIAL_ZERO_DEP_CLASSIFIER.md  Tutorial_Custom_Ops.ipynb  conf.py  fix_box.py  generate_toc.py  index.rst  make.bat  modules.rst  onnx9000-script.json  onnx9000.autograd.rst  onnx9000.codegen.rst  onnx9000.export.rst  onnx9000.jit.rst  onnx9000.ops.rst  onnx9000.parser.rst  onnx9000.rst  preprocess_readme.py  sphinx_ext_demo_ui.py
e2e/: agent.spec.ts  arena.spec.ts  compile.spec.ts  custom-ops.spec.ts  demo-agent.spec.ts  demo-apple-metal.spec.ts  demo-array.spec.ts  demo-autograd.spec.ts  demo-coreml.spec.ts  demo-cuda.spec.ts  demo-diffusers.spec.ts  demo-extended-converters.spec.ts  demo-genai.spec.ts  demo-graphsurgeon.spec.ts  demo-hummingbird.spec.ts  demo-iree.spec.ts  demo-jax.spec.ts  demo-json-extract.spec.ts  demo-llama-web.spec.ts  demo-mlir-lowering.spec.ts  demo-mmdnn.spec.ts  demo-mobile-memory.spec.ts  demo-modifier.spec.ts  demo-native.spec.ts  demo-new-model-arch.spec.ts  demo-onnx-script.spec.ts  demo-onnx2tf.spec.ts  demo-optimize.spec.ts  demo-profiler.spec.ts  demo-progressive-loading.spec.ts  demo-pytorch-codegen.spec.ts  demo-rocm.spec.ts  demo-serve.spec.ts  demo-simplify.spec.ts  demo-sparse.spec.ts  demo-tensorrt.spec.ts  demo-tfjs-shim.spec.ts  demo-tflite-converter.spec.ts  demo-transformers.spec.ts  demo-triton.spec.ts  (+20 more)
onnx9000/: __main__.py  cli.py
onnx9000_workspace/: __init__.py  test_workspace.py
scripts/: bootstrap.sh  generate_snapshots.py  update_badges.py
snapshots/: caffe-0.1.0.json  catboost-1.2.10.json  cntk-2.7.post2.json  coremltools-9.0.json  flax-0.12.6.json  flax-0.8.5.json  gguf-0.18.0.json  gguf-0.19.0.json  (+24 more)
(+1215 files in other folders)
