[project]
name = "onnx9000-workspace"
version = "1.0.0"
description = "Polyglot ONNX Ecosystem"
requires-python = ">=3.9"
dependencies = [
    "jinja2>=3.1.6",
    "pybind11>=3.0.2",
]

[tool.uv.workspace]
members = ["packages/python/*", "apps/cli"]

[tool.ruff]
line-length = 100
target-version = "py39"
exclude = [".git", ".mypy_cache", ".ruff_cache", ".venv", "node_modules", "dist", "pycdc"]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "C4"]
ignore = ["E501", "E741", "E721", "E402", "F403", "F405", "F811", "F401", "F821", "B017", "B018", "B904", "B007", "B905"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "scipy>=1.13.1",
]
[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
