[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "onnx9000-workspace"
version = "1.0.0"
description = "Polyglot ONNX Ecosystem"
requires-python = ">=3.9"
dynamic = ["dependencies", "optional-dependencies"]

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.hatch.metadata.hooks.requirements_txt.optional-dependencies]
docs = ["requirements-doc.txt"]
dev = ["requirements-dev.txt"]

[tool.uv.workspace]
members = ["packages/python/*", "apps/cli"]

[tool.ruff]
line-length = 100
target-version = "py39"
exclude = [".git", ".mypy_cache", ".ruff_cache", ".venv", "node_modules", "dist", "pycdc"]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "C4"]
ignore = ["E501", "E741", "E721", "E402", "F403", "F405", "F811", "F401", "F821", "B017", "B018", "B904", "B007", "B905"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
norecursedirs = ["pycdc", "node_modules", ".venv"]
testpaths = ["packages/python", "apps/cli"]

[tool.hatch.build.targets.wheel]
packages = ["onnx9000_workspace"]
