[project]
name = "onnx9000-cli"
version = "1.0.0"
description = "Unified CLI for ONNX9000 Ecosystem"
requires-python = ">=3.9"
dependencies = [
    "onnx9000-core",
    "onnx9000-backend-native",
    "onnx9000-optimizer",
    "onnx9000-converters",
    "onnx9000-toolkit",
    "onnx9000-optimum",
    "onnx9000-onnx2gguf",
    "onnx9000-openvino",
]

[project.scripts]
onnx9000 = "onnx9000_cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
onnx9000-core = { workspace = true }
onnx9000-backend-native = { workspace = true }
onnx9000-optimizer = { workspace = true }
onnx9000-converters = { workspace = true }
onnx9000-toolkit = { workspace = true }
onnx9000-optimum = { workspace = true }
onnx9000-onnx2gguf = { workspace = true }
onnx9000-openvino = { workspace = true }
