[project]
name = "onnx9000-cli"
version = "1.0.0"
description = "Unified CLI for ONNX9000 Ecosystem"
requires-python = ">=3.10"
dependencies = [
    "onnx9000-core",
    "onnx9000-backend-native",
    "onnx9000-optimizer",
    "onnx9000-converters",
    "onnx9000-toolkit",
    "onnx9000-optimum",
    "onnx9000-onnx2gguf",
    "onnx9000-openvino",
    "onnx9000-c-compiler",
    "onnx9000-tensorrt",
    "onnx9000-tvm",
    "onnx9000-diffusers",
    "onnx9000-tflite-exporter",
    "onnx9000-array",
    "onnx9000-zoo",
]

[project.scripts]
onnx9000 = "onnx9000_cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
onnx9000-core = { workspace = true }
onnx9000-backend-native = { workspace = true }
onnx9000-optimizer = { workspace = true }
onnx9000-converters = { workspace = true }
onnx9000-toolkit = { workspace = true }
onnx9000-optimum = { workspace = true }
onnx9000-onnx2gguf = { workspace = true }
onnx9000-openvino = { workspace = true }
onnx9000-c-compiler = { workspace = true }
onnx9000-tensorrt = { workspace = true }
onnx9000-tvm = { workspace = true }
onnx9000-diffusers = { workspace = true }
onnx9000-tflite-exporter = { workspace = true }
onnx9000-array = { workspace = true }
onnx9000-zoo = { workspace = true }
